@@ -1,3 +1,9 @@
+1998-12-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/infofile.h: rename PLANNER_FORCE to FORCE_FULL
+	* server-src/planner.c: rename PLANNER_FORCE to FORCE_FULL
+	* server-src/amadmin.c: rename PLANNER_FORCE to FORCE_FULL
+
 1998-12-01  John R. Jackson  <jrj@purdue.edu>
 
 	* server-src/amcheck.c: make -t mean do the tape checks, add new -l
